<resources>
    <string name="app_name">Accessibility</string>
    <string name="check_root">Check Your Root</string>
    <string name="check_root_error">ERROR:Check Your Root</string>
    <string name="check_root_succeed">SUCCEED:Enjoy Yourself</string>
    <string name="doc_infor">\n
        ACTION_DOWN = 0\n
        \n
        Deprecated\n
        \n
    ACTION_MULTIPLE = 2\n
    ACTION_UP = 1\n
        \n
    NonNull\n
        \n
    FLAG_CANCELED = 32\n
    FLAG_CANCELED_LONG_PRESS = 256\n
    FLAG_EDITOR_ACTION = 16\n
    FLAG_FALLBACK = 1024\n
    FLAG_FROM_SYSTEM = 8\n
    FLAG_KEEP_TOUCH_MODE = 4\n
    FLAG_LONG_PRESS = 128\n
    FLAG_SOFT_KEYBOARD = 2\n
    FLAG_TRACKING = 512\n
    FLAG_VIRTUAL_HARD_KEY = 64\n
        \n
    Deprecated\n
        \n
    FLAG_WOKE_HERE = 1\n
    KEYCODE_0 = 7\n
    KEYCODE_1 = 8\n
    KEYCODE_11 = 227\n
    KEYCODE_12 = 228\n
    KEYCODE_2 = 9\n
    KEYCODE_3 = 10\n
    KEYCODE_3D_MODE = 206\n
    KEYCODE_4 = 11\n
    KEYCODE_5 = 12\n
    KEYCODE_6 = 13\n
    KEYCODE_7 = 14\n
    KEYCODE_8 = 15\n
    KEYCODE_9 = 16\n
    KEYCODE_A = 29\n
    KEYCODE_ALL_APPS = 284\n
    KEYCODE_ALT_LEFT = 57\n
    KEYCODE_ALT_RIGHT = 58\n
    KEYCODE_APOSTROPHE = 75\n
    KEYCODE_APP_SWITCH = 187\n
    KEYCODE_ASSIST = 219\n
    KEYCODE_AT = 77\n
    KEYCODE_AVR_INPUT = 182\n
    KEYCODE_AVR_POWER = 181\n
    KEYCODE_B = 30\n
    KEYCODE_BACK = 4\n
    KEYCODE_BACKSLASH = 73\n
    KEYCODE_BOOKMARK = 174\n
    KEYCODE_BREAK = 121\n
    KEYCODE_BRIGHTNESS_DOWN = 220\n
    KEYCODE_BRIGHTNESS_UP = 221\n
    KEYCODE_BUTTON_1 = 188\n
    KEYCODE_BUTTON_10 = 197\n
    KEYCODE_BUTTON_11 = 198\n
    KEYCODE_BUTTON_12 = 199\n
    KEYCODE_BUTTON_13 = 200\n
    KEYCODE_BUTTON_14 = 201\n
    KEYCODE_BUTTON_15 = 202\n
    KEYCODE_BUTTON_16 = 203\n
    KEYCODE_BUTTON_2 = 189\n
    KEYCODE_BUTTON_3 = 190\n
    KEYCODE_BUTTON_4 = 191\n
    KEYCODE_BUTTON_5 = 192\n
    KEYCODE_BUTTON_6 = 193\n
    KEYCODE_BUTTON_7 = 194\n
    KEYCODE_BUTTON_8 = 195\n
    KEYCODE_BUTTON_9 = 196\n
    KEYCODE_BUTTON_A = 96\n
    KEYCODE_BUTTON_B = 97\n
    KEYCODE_BUTTON_C = 98\n
    KEYCODE_BUTTON_L1 = 102\n
    KEYCODE_BUTTON_L2 = 104\n
    KEYCODE_BUTTON_MODE = 110\n
    KEYCODE_BUTTON_R1 = 103\n
    KEYCODE_BUTTON_R2 = 105\n
    KEYCODE_BUTTON_SELECT = 109\n
    KEYCODE_BUTTON_START = 108\n
    KEYCODE_BUTTON_THUMBL = 106\n
    KEYCODE_BUTTON_THUMBR = 107\n
    KEYCODE_BUTTON_X = 99\n
    KEYCODE_BUTTON_Y = 100\n
    KEYCODE_BUTTON_Z = 101\n
    KEYCODE_C = 31\n
    KEYCODE_CALCULATOR = 210\n
    KEYCODE_CALENDAR = 208\n
    KEYCODE_CALL = 5\n
    KEYCODE_CAMERA = 27\n
    KEYCODE_CAPS_LOCK = 115\n
    KEYCODE_CAPTIONS = 175\n
    KEYCODE_CHANNEL_DOWN = 167\n
    KEYCODE_CHANNEL_UP = 166\n
    KEYCODE_CLEAR = 28\n
    KEYCODE_COMMA = 55\n
    KEYCODE_CONTACTS = 207\n
    KEYCODE_COPY = 278\n
    KEYCODE_CTRL_LEFT = 113\n
    KEYCODE_CTRL_RIGHT = 114\n
    KEYCODE_CUT = 277\n
    KEYCODE_D = 32\n
    KEYCODE_DEL = 67\n
    KEYCODE_DEMO_APP_1 = 301\n
    KEYCODE_DEMO_APP_2 = 302\n
    KEYCODE_DEMO_APP_3 = 303\n
    KEYCODE_DEMO_APP_4 = 304\n
    KEYCODE_DPAD_CENTER = 23\n
    KEYCODE_DPAD_DOWN = 20\n
    KEYCODE_DPAD_DOWN_LEFT = 269\n
    KEYCODE_DPAD_DOWN_RIGHT = 271\n
    KEYCODE_DPAD_LEFT = 21\n
    KEYCODE_DPAD_RIGHT = 22\n
    KEYCODE_DPAD_UP = 19\n
    KEYCODE_DPAD_UP_LEFT = 268\n
    KEYCODE_DPAD_UP_RIGHT = 270\n
    KEYCODE_DVR = 173\n
    KEYCODE_E = 33\n
    KEYCODE_EISU = 212\n
    KEYCODE_ENDCALL = 6\n
    KEYCODE_ENTER = 66\n
    KEYCODE_ENVELOPE = 65\n
    KEYCODE_EQUALS = 70\n
    KEYCODE_ESCAPE = 111\n
    KEYCODE_EXPLORER = 64\n
    KEYCODE_F = 34\n
    KEYCODE_F1 = 131\n
    KEYCODE_F10 = 140\n
    KEYCODE_F11 = 141\n
    KEYCODE_F12 = 142\n
    KEYCODE_F2 = 132\n
    KEYCODE_F3 = 133\n
    KEYCODE_F4 = 134\n
    KEYCODE_F5 = 135\n
    KEYCODE_F6 = 136\n
    KEYCODE_F7 = 137\n
    KEYCODE_F8 = 138\n
    KEYCODE_F9 = 139\n
    KEYCODE_FEATURED_APP_1 = 297\n
    KEYCODE_FEATURED_APP_2 = 298\n
    KEYCODE_FEATURED_APP_3 = 299\n
    KEYCODE_FEATURED_APP_4 = 300\n
    KEYCODE_FOCUS = 80\n
    KEYCODE_FORWARD = 125\n
    KEYCODE_FORWARD_DEL = 112\n
    KEYCODE_FUNCTION = 119\n
    KEYCODE_G = 35\n
    KEYCODE_GRAVE = 68\n
    KEYCODE_GUIDE = 172\n
    KEYCODE_H = 36\n
    KEYCODE_HEADSETHOOK = 79\n
    KEYCODE_HELP = 259\n
    KEYCODE_HENKAN = 214\n
    KEYCODE_HOME = 3\n
    KEYCODE_I = 37\n
    KEYCODE_INFO = 165\n
    KEYCODE_INSERT = 124\n
    KEYCODE_J = 38\n
    KEYCODE_K = 39\n
    KEYCODE_KANA = 218\n
    KEYCODE_KATAKANA_HIRAGANA = 215\n
    KEYCODE_L = 40\n
    KEYCODE_LANGUAGE_SWITCH = 204\n
    KEYCODE_LAST_CHANNEL = 229\n
    KEYCODE_LEFT_BRACKET = 71\n
    KEYCODE_M = 41\n
    KEYCODE_MANNER_MODE = 205\n
    KEYCODE_MEDIA_AUDIO_TRACK = 222\n
    KEYCODE_MEDIA_CLOSE = 128\n
    KEYCODE_MEDIA_EJECT = 129\n
    KEYCODE_MEDIA_FAST_FORWARD = 90\n
    KEYCODE_MEDIA_NEXT = 87\n
    KEYCODE_MEDIA_PAUSE = 127\n
    KEYCODE_MEDIA_PLAY = 126\n
    KEYCODE_MEDIA_PLAY_PAUSE = 85\n
    KEYCODE_MEDIA_PREVIOUS = 88\n
    KEYCODE_MEDIA_RECORD = 130\n
    KEYCODE_MEDIA_REWIND = 89\n
    KEYCODE_MEDIA_SKIP_BACKWARD = 273\n
    KEYCODE_MEDIA_SKIP_FORWARD = 272\n
    KEYCODE_MEDIA_STEP_BACKWARD = 275\n
    KEYCODE_MEDIA_STEP_FORWARD = 274\n
    KEYCODE_MEDIA_STOP = 86\n
    KEYCODE_MEDIA_TOP_MENU = 226\n
    KEYCODE_MENU = 82\n
    KEYCODE_META_LEFT = 117\n
    KEYCODE_META_RIGHT = 118\n
    KEYCODE_MINUS = 69\n
    KEYCODE_MOVE_END = 123\n
    KEYCODE_MOVE_HOME = 122\n
    KEYCODE_MUHENKAN = 213\n
    KEYCODE_MUSIC = 209\n
    KEYCODE_MUTE = 91\n
    KEYCODE_N = 42\n
    KEYCODE_NAVIGATE_IN = 262\n
    KEYCODE_NAVIGATE_NEXT = 261\n
    KEYCODE_NAVIGATE_OUT = 263\n
    KEYCODE_NAVIGATE_PREVIOUS = 260\n
    KEYCODE_NOTIFICATION = 83\n
    KEYCODE_NUM = 78\n
    KEYCODE_NUMPAD_0 = 144\n
    KEYCODE_NUMPAD_1 = 145\n
    KEYCODE_NUMPAD_2 = 146\n
    KEYCODE_NUMPAD_3 = 147\n
    KEYCODE_NUMPAD_4 = 148\n
    KEYCODE_NUMPAD_5 = 149\n
    KEYCODE_NUMPAD_6 = 150\n
    KEYCODE_NUMPAD_7 = 151\n
    KEYCODE_NUMPAD_8 = 152\n
    KEYCODE_NUMPAD_9 = 153\n
    KEYCODE_NUMPAD_ADD = 157\n
    KEYCODE_NUMPAD_COMMA = 159\n
    KEYCODE_NUMPAD_DIVIDE = 154\n
    KEYCODE_NUMPAD_DOT = 158\n
    KEYCODE_NUMPAD_ENTER = 160\n
    KEYCODE_NUMPAD_EQUALS = 161\n
    KEYCODE_NUMPAD_LEFT_PAREN = 162\n
    KEYCODE_NUMPAD_MULTIPLY = 155\n
    KEYCODE_NUMPAD_RIGHT_PAREN = 163\n
    KEYCODE_NUMPAD_SUBTRACT = 156\n
    KEYCODE_NUM_LOCK = 143\n
    KEYCODE_O = 43\n
    KEYCODE_P = 44\n
    KEYCODE_PAGE_DOWN = 93\n
    KEYCODE_PAGE_UP = 92\n
    KEYCODE_PAIRING = 225\n
    KEYCODE_PASTE = 279\n
    KEYCODE_PERIOD = 56\n
    KEYCODE_PICTSYMBOLS = 94\n
    KEYCODE_PLUS = 81\n
    KEYCODE_POUND = 18\n
    KEYCODE_POWER = 26\n
    KEYCODE_PROFILE_SWITCH = 288\n
    KEYCODE_PROG_BLUE = 186\n
    KEYCODE_PROG_GREEN = 184\n
    KEYCODE_PROG_RED = 183\n
    KEYCODE_PROG_YELLOW = 185\n
    KEYCODE_Q = 45\n
    KEYCODE_R = 46\n
    KEYCODE_REFRESH = 285\n
    KEYCODE_RIGHT_BRACKET = 72\n
    KEYCODE_RO = 217\n
    KEYCODE_S = 47\n
    KEYCODE_SCROLL_LOCK = 116\n
    KEYCODE_SEARCH = 84\n
    KEYCODE_SEMICOLON = 74\n
    KEYCODE_SETTINGS = 176\n
    KEYCODE_SHIFT_LEFT = 59\n
    KEYCODE_SHIFT_RIGHT = 60\n
    KEYCODE_SLASH = 76\n
    KEYCODE_SLEEP = 223\n
    KEYCODE_SOFT_LEFT = 1\n
    KEYCODE_SOFT_RIGHT = 2\n
    KEYCODE_SOFT_SLEEP = 276\n
    KEYCODE_SPACE = 62\n
    KEYCODE_STAR = 17\n
    KEYCODE_STB_INPUT = 180\n
    KEYCODE_STB_POWER = 179\n
    KEYCODE_STEM_1 = 265\n
    KEYCODE_STEM_2 = 266\n
    KEYCODE_STEM_3 = 267\n
    KEYCODE_STEM_PRIMARY = 264\n
    KEYCODE_SWITCH_CHARSET = 95\n
    KEYCODE_SYM = 63\n
    KEYCODE_SYSRQ = 120\n
    KEYCODE_SYSTEM_NAVIGATION_DOWN = 281\n
    KEYCODE_SYSTEM_NAVIGATION_LEFT = 282\n
    KEYCODE_SYSTEM_NAVIGATION_RIGHT = 283\n
    KEYCODE_SYSTEM_NAVIGATION_UP = 280\n
    KEYCODE_T = 48\n
    KEYCODE_TAB = 61\n
    KEYCODE_THUMBS_DOWN = 287\n
    KEYCODE_THUMBS_UP = 286\n
    KEYCODE_TV = 170\n
    KEYCODE_TV_ANTENNA_CABLE = 242\n
    KEYCODE_TV_AUDIO_DESCRIPTION = 252\n
    KEYCODE_TV_AUDIO_DESCRIPTION_MIX_DOWN = 254\n
    KEYCODE_TV_AUDIO_DESCRIPTION_MIX_UP = 253\n
    KEYCODE_TV_CONTENTS_MENU = 256\n
    KEYCODE_TV_DATA_SERVICE = 230\n
    KEYCODE_TV_INPUT = 178\n
    KEYCODE_TV_INPUT_COMPONENT_1 = 249\n
    KEYCODE_TV_INPUT_COMPONENT_2 = 250\n
    KEYCODE_TV_INPUT_COMPOSITE_1 = 247\n
    KEYCODE_TV_INPUT_COMPOSITE_2 = 248\n
    KEYCODE_TV_INPUT_HDMI_1 = 243\n
    KEYCODE_TV_INPUT_HDMI_2 = 244\n
    KEYCODE_TV_INPUT_HDMI_3 = 245\n
    KEYCODE_TV_INPUT_HDMI_4 = 246\n
    KEYCODE_TV_INPUT_VGA_1 = 251\n
    KEYCODE_TV_MEDIA_CONTEXT_MENU = 257\n
    KEYCODE_TV_NETWORK = 241\n
    KEYCODE_TV_NUMBER_ENTRY = 234\n
    KEYCODE_TV_POWER = 177\n
    KEYCODE_TV_RADIO_SERVICE = 232\n
    KEYCODE_TV_SATELLITE = 237\n
    KEYCODE_TV_SATELLITE_BS = 238\n
    KEYCODE_TV_SATELLITE_CS = 239\n
    KEYCODE_TV_SATELLITE_SERVICE = 240\n
    KEYCODE_TV_TELETEXT = 233\n
    KEYCODE_TV_TERRESTRIAL_ANALOG = 235\n
    KEYCODE_TV_TERRESTRIAL_DIGITAL = 236\n
    KEYCODE_TV_TIMER_PROGRAMMING = 258\n
    KEYCODE_TV_ZOOM_MODE = 255\n
    KEYCODE_U = 49\n
    KEYCODE_UNKNOWN = 0\n
    KEYCODE_V = 50\n
    KEYCODE_VIDEO_APP_1 = 289\n
    KEYCODE_VIDEO_APP_2 = 290\n
    KEYCODE_VIDEO_APP_3 = 291\n
    KEYCODE_VIDEO_APP_4 = 292\n
    KEYCODE_VIDEO_APP_5 = 293\n
    KEYCODE_VIDEO_APP_6 = 294\n
    KEYCODE_VIDEO_APP_7 = 295\n
    KEYCODE_VIDEO_APP_8 = 296\n
    KEYCODE_VOICE_ASSIST = 231\n
    KEYCODE_VOLUME_DOWN = 25\n
    KEYCODE_VOLUME_MUTE = 164\n
    KEYCODE_VOLUME_UP = 24\n
    KEYCODE_W = 51\n
    KEYCODE_WAKEUP = 224\n
    KEYCODE_WINDOW = 171\n
    KEYCODE_X = 52\n
    KEYCODE_Y = 53\n
    KEYCODE_YEN = 216\n
    KEYCODE_Z = 54\n
    KEYCODE_ZENKAKU_HANKAKU = 211\n
    KEYCODE_ZOOM_IN = 168\n
    KEYCODE_ZOOM_OUT = 169\n
        \n
    Deprecated\n
        \n
    MAX_KEYCODE = 84\n
    META_ALT_LEFT_ON = 16\n
    META_ALT_MASK = 50\n
    META_ALT_ON = 2\n
    META_ALT_RIGHT_ON = 32\n
    META_CAPS_LOCK_ON = 1048576\n
    META_CTRL_LEFT_ON = 8192\n
    META_CTRL_MASK = 28672\n
    META_CTRL_ON = 4096\n
    META_CTRL_RIGHT_ON = 16384\n
    META_FUNCTION_ON = 8\n
    META_META_LEFT_ON = 131072\n
    META_META_MASK = 458752\n
    META_META_ON = 65536\n
    META_META_RIGHT_ON = 262144\n
    META_NUM_LOCK_ON = 2097152\n
    META_SCROLL_LOCK_ON = 4194304\n
    META_SHIFT_LEFT_ON = 64\n
    META_SHIFT_MASK = 193\n
    META_SHIFT_ON = 1\n
    META_SHIFT_RIGHT_ON = 128\n
    META_SYM_ON = 4\n
    </string>
    <string name="lay_text_service">Service</string>
    <string name="lay_button_start">StartService</string>
    <string name="lay_button_stop">StopService</string>
    <string name="lay_text_runtime">Runtime Information</string>
    <string name="lay_text_unrun">Service is unStarted</string>
    <string name="lay_text_xp">The xposed framework is not activated</string>
    <string name="lay_text_settings">Settings</string>
    <string name="lay_text_single">SingleTap</string>
    <string name="lay_edit_single">input a keyneme or keycode i.e.</string>
    <string name="lay_text_double">DoubleTap</string>
    <string name="lay_edit_double">KEYCODE_APP_SWITCH</string>
    <string name="lay_text_long">LongPress</string>
    <string name="lay_edit_long">187</string>
    <string name="lay_button_save">Save</string>
    <string name="lay_text_miui">MIUI Special offer</string>
    <string name="lay_switch_remove">Removed the upper display notification</string>
    <string name="lay_switch_collapse">Collapse into history notifications is prohibited</string>
    <string name="lay_text_flowing">Flowing</string>
    <string name="lay_text_github_url">https://github.com/SkyCoftheL/Accessibility</string>
    <string name="lay_text_document">Document</string>
    <string name="title_document">Document</string>
    <string name="title_settings">Settings</string>
    <string name="title_service">Service</string>
    <string name="start_switch">Service</string>
</resources>