<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Servicetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_text_service"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/lay_button_start" />

                <Button
                    android:id="@+id/stopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_button_stop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/RTInfor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_text_runtime"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/infortextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/lay_text_unrun" />

                <TextView
                    android:id="@+id/activate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/lay_text_xp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_text_settings"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/SingleTap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lay_text_single" />

                    <EditText
                        android:id="@+id/SingleTapEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:ems="11"
                        android:hint="@string/lay_edit_single"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/DoubleTap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lay_text_double" />

                    <EditText
                        android:id="@+id/DoubleTapEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:ems="11"
                        android:hint="@string/lay_edit_double"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/LongPress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lay_text_long" />

                    <EditText
                        android:id="@+id/LongPressEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:ems="11"
                        android:hint="@string/lay_edit_long"
                        android:inputType="text" />

                </LinearLayout>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/lay_button_save" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_text_miui"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/upper"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/lay_switch_remove"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/unimportant"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/lay_switch_collapse"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lay_text_flowing"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/urltext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:gravity="center_vertical"
                    android:text="@string/lay_text_github_url"
                    android:textColorLink="#676464" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lay_text_document"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/docinfro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/doc_infor" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>