<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_service">


    <fragment
        android:id="@+id/navigation_service"
        android:name="org.example.accessible.ui.service.ServiceFragment"
        android:label="@string/title_service"
        tools:layout="@layout/fragment_service" />


    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.example.accessible.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_document"
        android:name="org.example.accessible.ui.document.DocumentFragment"
        android:label="@string/title_document"
        tools:layout="@layout/fragment_document" />




</navigation>