<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.document.DocumentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lay_text_flowing"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/urltext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autoLink="web"
                android:gravity="center_vertical"
                android:text="@string/lay_text_github_url"
                android:textColorLink="#676464" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lay_text_document"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/docinfro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/doc_infor" />
        </LinearLayout>

        </LinearLayout>



    </ScrollView>


</LinearLayout>